# auto-rewrite-commit

./: .gitignore  AGENTS.md  LICENSE  README.md  aoto-git.plan.md  design.md  example_usage.py  git-rebase.md  pyproject.toml
src/: __init__.py  ai_rewriter.py  clustering.py  config.py  database.py  executor.py  git_operations.py  main.py  state_manager.py  utils.py
tests/: __init__.py  test_clustering.py  test_executor.py  test_git_ops.py
